vemo-app/main/default/objects/CreditCriteria__c/CreditCriteria__c.object-meta.xml
<CustomObject>
    <label>Credit Criteria</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Credit Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>