vemo-app/main/default/objects/CreditCriteria__c/fields/AmountOperator__c.field-meta.xml
<CustomField>
    <fullName>AmountOperator__c</fullName>
    <label>Amount Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operator</valueSetName>
    </valueSet>
</CustomField>