vemo-app/main/default/objects/CreditCriteria__c/fields/DeclineType__c.field-meta.xml
<CustomField>
    <fullName>DeclineType__c</fullName>
    <label>Decline Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeclineType</valueSetName>
    </valueSet>
</CustomField>