vemo-app/main/default/objects/CreditCriteria__c/fields/EvaluationCriteria__c.field-meta.xml
<CustomField>
    <fullName>EvaluationCriteria__c</fullName>
    <label>Evaluation Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditEvaluationCriteria</valueSetName>
    </valueSet>
</CustomField>