vemo-app/main/default/objects/CreditCriteria__c/fields/FICOScore__c.field-meta.xml
<CustomField>
    <fullName>FICOScore__c</fullName>
    <label>FICO Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>