vemo-app/main/default/objects/CreditCriteria__c/fields/FICOScoreOperator__c.field-meta.xml
<CustomField>
    <fullName>FICOScoreOperator__c</fullName>
    <label>FICO Score Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operator</valueSetName>
    </valueSet>
</CustomField>