vemo-app/main/default/objects/CreditCriteria__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Credit Criteria</relationshipLabel>
    <relationshipName>Credit_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>