vemo-app/main/default/objects/CreditCriteria__c/fields/TimePeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>TimePeriodMonths__c</fullName>
    <label>Time Period(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>