vemo-app/main/default/objects/CreditCriteria__c/fields/TimePeriodOperator__c.field-meta.xml
<CustomField>
    <fullName>TimePeriodOperator__c</fullName>
    <label>Time Period Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operator</valueSetName>
    </valueSet>
</CustomField>